# ChangeLog for www-plugins/noscript
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*noscript-2.5.5-r1 (21 Sep 2012)

  21 Sep 2012; Martin Väth <martin@mvath.de>
  Bump to EAPI=5. Revision bump to force slot dependency.

*noscript-2.5.5 (14 Sep 2012)

  14 Sep 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.5.4 (05 Sep 2012)

  05 Sep 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.5.3 (29 Aug 2012)

  29 Aug 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.5.2 (22 Aug 2012)

  22 Aug 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.5.1 (14 Aug 2012)

  14 Aug 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.5 (29 Jul 2012)

  29 Jul 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.4.9 (21 Jul 2012)

  21 Jul 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.4.8 (12 Jul 2012)

  12 Jul 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.4.7 (01 Jul 2012)

  01 Jul 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.4.6 (13 Jun 2012)

  13 Jun 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.4.5 (11 Jun 2012)

  11 Jun 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.4.4 (04 Jun 2012)

  04 Jun 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.4.3 (28 May 2012)

  28 May 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.4.2 (19 May 2012)

  19 May 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.4.1 (11 May 2012)

  11 May 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.4 (04 May 2012)
