@@ -12,7 +12,7 @@ DESCRIPTION="zsh automatic complete-word and list-choices: incremental completio
 HOMEPAGE="https://github.com/hchbaw/auto-fu.zsh/"
 SRC_URI="http://github.com/hchbaw/${mPN}/tarball/v${PV} -> ${P}.tar.gz"
 
-LICENSE="as-is"
+LICENSE="HPND"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="+compile +kill-line"
