@@ -1,1 +1,1 @@
-DIST noscript-2.5.5.xpi 527915 SHA256 2d7bd65cd37a091b594c40638823c3c914d786d376fa3003d92dd402abef3e61 SHA512 883f0baf761bb675ebc917ed2330b6f2cf21a002b4cf3f1aa8ec5b3cbade82869a07ce45de6d72f118888a491e791396776465dee2a913fb7acb59547a37f96f WHIRLPOOL 51cf2530a41f812ff6e37da238f4b190db3f1ca602003f7602ad69efd81078aae525d6cb98a3441dc3badbfe10366416141e6aff9b53ae53b7a8564e1eadfd4b
+DIST noscript-2.5.6.xpi 529316 SHA256 2b5a781cc5d44b981fcb7267557c31a8f66b496826514f7cd98d12f5e2b17e5a SHA512 2f1112f2b8a1c5f3074cccd6d499f8e679d38de76f9382c9b578d3b36e06eb4302d29b6ec28e9628bd4323d07ff932c77f0333d6a38478250bf90cfe31d4cfad WHIRLPOOL cc31e2e8cbfd4638c6d32a9b031ba186cb11ebc15ca5d1219dd29143e13633c6daaeed88f9415ddc04840a88c1db027a8a025d8cc037922ea5f58c82a74e73c8
