@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*noscript-2.5.6 (29 Sep 2012)
+
+  29 Sep 2012; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild.
+
 *noscript-2.5.5-r1 (21 Sep 2012)
 
   21 Sep 2012; Martin Väth <martin@mvath.de>
